--- a/base/java7/Dockerfile
+++ b/base/java7/Dockerfile
@@ -3,6 +3,10 @@
 FROM debian:7.6
 MAINTAINER Stephan Harbauer "docker@harbauer.org"
 
+# Install generall things first
+RUN apt-get update
+RUN noninteractive=noninteractive apt-get install ca-certificates -y
+
 # Add java repo
 RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu precise main" | tee -a /etc/apt/sources.list
 RUN echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu precise main" | tee -a /etc/apt/sources.list
@@ -12,4 +16,4 @@ RUN apt-get update
 
 # Install Java 7
 RUN echo oracle-java7-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
-RUN noninteractive=noninteractive apt-get install oracle-java7-installer -y
+RUN noninteractive=noninteractive apt-get install oracle-java7-installer ca-certificates -y
